[gd_scene load_steps=9 format=3 uid="uid://c3eucvdnmnw54"]

[ext_resource type="Script" uid="uid://c8qtq6lp3uc26" path="res://Scripts/PhonicsModule.gd" id="1_script"]
[ext_resource type="Texture2D" uid="uid://0con8ixqofpr" path="res://gui/Update/UI/ui 8.png" id="2_edgla"]
[ext_resource type="FontFile" uid="uid://l1q8mfvbxty3" path="res://Fonts/dyslexiafont/OpenDyslexic-Regular.otf" id="3_regular"]
[ext_resource type="FontFile" uid="uid://bdlqaeel30c00" path="res://Fonts/dyslexiafont/OpenDyslexic-Bold.otf" id="4_bold"]
[ext_resource type="Texture2D" uid="uid://cylxg6njg7bam" path="res://gui/Update/UI/yellow button.png" id="5_yellow"]
[ext_resource type="AudioStream" uid="uid://isf8nct72815" path="res://audio/button click sound effect/button click 4.ogg" id="6_click"]
[ext_resource type="Texture2D" uid="uid://bmjd8nkagj08e" path="res://gui/Update/UI/long uncolored button.png" id="6_ydvs0"]
[ext_resource type="AudioStream" uid="uid://cbrtwl8sob8oo" path="res://audio/buttons select sound effect/button select hover 2.ogg" id="7_hover"]

[node name="PhonicsModule" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_edgla")

[node name="MainContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 57.0
offset_top = 35.0
offset_right = -58.0
offset_bottom = -35.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50

[node name="HeaderPanel" type="Panel" parent="MainContainer"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
size_flags_vertical = 0

[node name="HeaderContainer" type="VBoxContainer" parent="MainContainer/HeaderPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -30.0
offset_right = 400.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="TitleContainer" type="HBoxContainer" parent="MainContainer/HeaderPanel/HeaderContainer"]
layout_mode = 2
size_flags_vertical = 0
alignment = 1

[node name="TitleLabel" type="Label" parent="MainContainer/HeaderPanel/HeaderContainer/TitleContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("4_bold")
theme_override_font_sizes/font_size = 36
text = "PHONICS LEARNING"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BackButton" type="Button" parent="MainContainer/HeaderPanel/HeaderContainer/TitleContainer"]
custom_minimum_size = Vector2(120, 45)
layout_mode = 2
size_flags_horizontal = 0
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_bold")
theme_override_font_sizes/font_size = 16
text = "Back"
icon = ExtResource("5_yellow")
flat = true
icon_alignment = 1
expand_icon = true

[node name="ProgressContainer" type="HBoxContainer" parent="MainContainer/HeaderPanel/HeaderContainer"]
layout_mode = 2
size_flags_vertical = 0
alignment = 1

[node name="ProgressLabel" type="Label" parent="MainContainer/HeaderPanel/HeaderContainer/ProgressContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_regular")
theme_override_font_sizes/font_size = 16
text = "Overall Progress: 0%"

[node name="ProgressBar" type="ProgressBar" parent="MainContainer/HeaderPanel/HeaderContainer/ProgressContainer"]
custom_minimum_size = Vector2(300, 20)
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="MainContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="CategoriesGrid" type="GridContainer" parent="MainContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 3

[node name="LettersCard" type="Panel" parent="MainContainer/ScrollContainer/CategoriesGrid"]
custom_minimum_size = Vector2(450, 300)
layout_mode = 2

[node name="LettersContent" type="VBoxContainer" parent="MainContainer/ScrollContainer/CategoriesGrid/LettersCard"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = 15.0
offset_right = -15.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 2

[node name="IconContainer" type="CenterContainer" parent="MainContainer/ScrollContainer/CategoriesGrid/LettersCard/LettersContent"]
layout_mode = 2
size_flags_vertical = 3

[node name="IconLabel" type="Label" parent="MainContainer/ScrollContainer/CategoriesGrid/LettersCard/LettersContent/IconContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.2, 0.4, 0.8, 1)
theme_override_fonts/font = ExtResource("4_bold")
theme_override_font_sizes/font_size = 48
text = "ABC"
horizontal_alignment = 1

[node name="TitleLabel" type="Label" parent="MainContainer/ScrollContainer/CategoriesGrid/LettersCard/LettersContent"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_bold")
theme_override_font_sizes/font_size = 20
text = "Letters"
horizontal_alignment = 1

[node name="DescLabel" type="Label" parent="MainContainer/ScrollContainer/CategoriesGrid/LettersCard/LettersContent"]
custom_minimum_size = Vector2(1, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_regular")
theme_override_font_sizes/font_size = 14
text = "Trace A-Z and hear sounds"
horizontal_alignment = 1
autowrap_mode = 2

[node name="ProgressLabel" type="Label" parent="MainContainer/ScrollContainer/CategoriesGrid/LettersCard/LettersContent"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_regular")
theme_override_font_sizes/font_size = 12
text = "0% Complete"
horizontal_alignment = 1

[node name="EnterButton" type="Button" parent="MainContainer/ScrollContainer/CategoriesGrid/LettersCard/LettersContent"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_bold")
theme_override_font_sizes/font_size = 16
text = "Trace Letters"
icon = ExtResource("6_ydvs0")
flat = true
icon_alignment = 1
expand_icon = true

[node name="SightWordsCard" type="Panel" parent="MainContainer/ScrollContainer/CategoriesGrid"]
custom_minimum_size = Vector2(450, 300)
layout_mode = 2

[node name="SightWordsContent" type="VBoxContainer" parent="MainContainer/ScrollContainer/CategoriesGrid/SightWordsCard"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = 15.0
offset_right = -15.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 2

[node name="IconContainer" type="CenterContainer" parent="MainContainer/ScrollContainer/CategoriesGrid/SightWordsCard/SightWordsContent"]
layout_mode = 2
size_flags_vertical = 3

[node name="IconLabel" type="Label" parent="MainContainer/ScrollContainer/CategoriesGrid/SightWordsCard/SightWordsContent/IconContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.2, 0.6, 0.4, 1)
theme_override_fonts/font = ExtResource("4_bold")
theme_override_font_sizes/font_size = 24
text = "the
cat"
horizontal_alignment = 1

[node name="TitleLabel" type="Label" parent="MainContainer/ScrollContainer/CategoriesGrid/SightWordsCard/SightWordsContent"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_bold")
theme_override_font_sizes/font_size = 20
text = "Sight Words"
horizontal_alignment = 1

[node name="DescLabel" type="Label" parent="MainContainer/ScrollContainer/CategoriesGrid/SightWordsCard/SightWordsContent"]
custom_minimum_size = Vector2(1, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_regular")
theme_override_font_sizes/font_size = 14
text = "Common words like 'the', 'and'"
horizontal_alignment = 1
autowrap_mode = 2

[node name="ProgressLabel" type="Label" parent="MainContainer/ScrollContainer/CategoriesGrid/SightWordsCard/SightWordsContent"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_regular")
theme_override_font_sizes/font_size = 12
text = "0% Complete"
horizontal_alignment = 1

[node name="EnterButton" type="Button" parent="MainContainer/ScrollContainer/CategoriesGrid/SightWordsCard/SightWordsContent"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_bold")
theme_override_font_sizes/font_size = 16
text = "Trace Words"
icon = ExtResource("6_ydvs0")
flat = true
icon_alignment = 1
expand_icon = true

[node name="ButtonClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_click")

[node name="ButtonHover" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_hover")

[connection signal="pressed" from="MainContainer/HeaderPanel/HeaderContainer/TitleContainer/BackButton" to="." method="_on_back_button_pressed"]
